[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scr/racing_report_package_dsirko"]
exclude = ["tests"]
include = ["scr/racing_report_package_dsirko/*"]
strict-naming = true
infer_tag = true

[project]
name = "racing_report_package_dsirko"
version = "0.0.2"
authors = [
  { name="Dmytro Sirko", email="dimasirko@gmail.com" },
]
description = "The package builds and prints a race report."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"